Fix issue with re-ordered pruned outputs
Use a LinkedHashSet to keep the order of outputs `toKeep` when
pruning other unnecessary outputs. Otherwise we might end up with
mixed up outputs, without an intermmediate `Eval`.

Fixes: #14330
Follows: 0c7241473c9c3ecb0118708fa453e1437408e068
(cherry picked from commit cfbab830ea278baaed11998e0895f5705b474d27)

# Conflicts:
#	server/src/main/java/io/crate/planner/operators/LimitDistinct.java
#	server/src/main/java/io/crate/planner/operators/ProjectSet.java
#	server/src/main/java/io/crate/planner/operators/WindowAgg.java